# kontour

./: Cargo.toml  Dioxus.toml  README.md
assets/: tailwind.css
assets/styling/: configmaps.css  create_daemonset.css  create_deployment.css  create_forms.css  create_namespace.css  create_pod.css  create_statefulset.css  cronjobs.css  daemonsets.css  deployments.css  dialog.css  ingresses.css  insights.css  jobs.css  main.css  namespaces.css  navbar.css  nodes.css  overview.css  pods.css  pvcs.css  secrets.css  services.css  statefulsets.css
src/: main.rs  utils.rs
src/components/: configmap_item.rs  cronjob_item.rs  daemonset_item.rs  deployment_item.rs  ingress_item.rs  job_item.rs  kubeconfig_name_dialog.rs  mod.rs  namespace_item.rs  namespace_selector.rs  node_item.rs  pod_containers.rs  pod_item.rs  pvc_item.rs  search_input.rs  secret_item.rs  service_item.rs  statefulset_item.rs  status_selector.rs
src/contexts/: error.rs  kubeconfig.rs  mod.rs
src/k8s/: cluster_resources.rs  cluster_stats.rs  events.rs  mod.rs  node_metrics.rs  problem_pod.rs  resource_limits.rs  resource_metrics.rs  unused_resources.rs
src/utils/: mod.rs
src/views/: blog.rs  configmaps.rs  create_cronjob.rs  create_daemonset.rs  create_deployment.rs  create_namespace.rs  create_pod.rs  create_statefulset.rs  cronjobs.rs  daemonsets.rs  deployments.rs  home.rs  ingresses.rs  insights.rs  jobs.rs  mod.rs  namespaces.rs  navbar.rs  nodes.rs  pods.rs  pvcs.rs  secrets.rs  services.rs  statefulsets.rs
